--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,11 @@
         android:theme="@style/Theme.LionSchool"
         tools:targetApi="31">
         <activity
+            android:name=".AlunoActivity"
+            android:exported="false"
+            android:label="@string/title_activity_aluno"
+            android:theme="@style/Theme.LionSchool" />
+        <activity
             android:name=".gui.AlunoActivity"
             android:exported="false"
             android:label="@string/title_activity_aluno"
